test/files/neg/t8667.check
t8667.scala:6: error: unknown parameter name: c
  def c2 = new C(a = 42, b = 17, c = 5)
                                   ^
t8667.scala:6: error: too many arguments (found 3, expected 2) for constructor C: (a: Int, b: Int): C
  def c2 = new C(a = 42, b = 17, c = 5)
           ^
t8667.scala:7: error: unknown parameter name: c
  def c3 = new C(b = 42, a = 17, c = 5)
                                   ^
t8667.scala:7: error: too many arguments (found 3, expected 2) for constructor C: (a: Int, b: Int): C
  def c3 = new C(b = 42, a = 17, c = 5)
           ^
t8667.scala:8: error: positional after named argument.
  def c4 = new C(b = 42, a = 17, 5)
                                 ^
t8667.scala:8: error: too many arguments (found 3, expected 2) for constructor C: (a: Int, b: Int): C
  def c4 = new C(b = 42, a = 17, 5)
           ^
t8667.scala:9: error: unknown parameter name: c
  def c5 = new C(a = 42, c = 17)
                           ^
t8667.scala:10: error: unknown parameter name: c
  def c6 = new C(a = 42, c = 17, b = 5)
                           ^
t8667.scala:10: error: too many arguments (found 3, expected 2) for constructor C: (a: Int, b: Int): C
  def c6 = new C(a = 42, c = 17, b = 5)
           ^
t8667.scala:11: error: unknown parameter name: c
  def c7 = new C(c = 42, a = 17, b = 5)
                   ^
t8667.scala:11: error: too many arguments (found 3, expected 2) for constructor C: (a: Int, b: Int): C
  def c7 = new C(c = 42, a = 17, b = 5)
           ^
t8667.scala:12: error: parameter 'b' is already specified at parameter position 2
  def c8 = new C(42, 17, b = 5)
                           ^
t8667.scala:12: error: too many arguments (found 3, expected 2) for constructor C: (a: Int, b: Int): C
  def c8 = new C(42, 17, b = 5)
           ^
t8667.scala:13: error: unknown parameter name: c
  def c9 = new C(a = 42, c = 17, d = 3, b = 5)
                           ^
t8667.scala:13: error: unknown parameter name: d
  def c9 = new C(a = 42, c = 17, d = 3, b = 5)
                                   ^
t8667.scala:13: error: too many arguments (found 4, expected 2) for constructor C: (a: Int, b: Int): C
  def c9 = new C(a = 42, c = 17, d = 3, b = 5)
           ^
t8667.scala:14: error: unknown parameter name: d
  def c0 = new C(42, 17, d = 3, c = 5)
                           ^
t8667.scala:14: error: unknown parameter name: c
  def c0 = new C(42, 17, d = 3, c = 5)
                                  ^
t8667.scala:14: error: too many arguments (found 4, expected 2) for constructor C: (a: Int, b: Int): C
  def c0 = new C(42, 17, d = 3, c = 5)
           ^
t8667.scala:31: error: no arguments allowed for nullary method f0: (): Int
    f0(1)
       ^
t8667.scala:32: error: too many arguments (found 2, expected 1) for method f1: (i: Int): Int
    f1(1, 2)
          ^
t8667.scala:33: error: too many arguments (found 3, expected 1) for method f1: (i: Int): Int
    f1(1, 2, 3)
          ^
t8667.scala:34: error: too many arguments (found 4, expected 1) for method f1: (i: Int): Int
    f1(1, 2, 3, 4)
          ^
t8667.scala:35: error: unknown parameter name: j
    f1(1, j = 2, 3, 4)
            ^
t8667.scala:35: error: too many arguments (found 4, expected 1) for method f1: (i: Int): Int
    f1(1, j = 2, 3, 4)
                 ^
t8667.scala:36: error: unknown parameter name: j
    f1(1, j = 2, k = 3, 4)
            ^
t8667.scala:36: error: unknown parameter name: k
    f1(1, j = 2, k = 3, 4)
                   ^
t8667.scala:36: error: too many arguments (found 4, expected 1) for method f1: (i: Int): Int
    f1(1, j = 2, k = 3, 4)
                        ^
t8667.scala:37: error: unknown parameter name: k
    f2(k = 1, i = 2, j = 3)
         ^
t8667.scala:37: error: too many arguments (found 3, expected 2) for method f2: (i: Int, j: Int): Int
    f2(k = 1, i = 2, j = 3)
      ^
t8667.scala:38: error: too many arguments (found 7, expected 6) for method f6: (i: Int, j: Int, k: Int, l: Int, m: Int, n: Int): Int
    f6(1, 2, 3, 4, 5, 6, 7)
                         ^
t8667.scala:39: error: too many arguments (found 8, expected 6) for method f6: (i: Int, j: Int, k: Int, l: Int, m: Int, n: Int): Int
    f6(1, 2, 3, 4, 5, 6, 7, 8)
                         ^
t8667.scala:40: error: too many arguments (found 15, expected 12) for method f12: (i: Int, j: Int, k: Int, l: Int, m: Int, n: Int, o: Int, p: Int, q: Int, r: Int, s: Int, t: Int): Int
    f12(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15)
                                               ^
t8667.scala:46: error: too many arguments (found 22, expected 1) for method mini: (x: A): Int
    mini(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22)
            ^
t8667.scala:48: error: too many arguments (found 24, which exceeds the largest Tuple) for method max: (x: Any): Int
    max(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24)
           ^
t8667.scala:49: error: too many arguments (found 24, which exceeds the largest Tuple) for method maxi: (x: A): Int
    maxi(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24)
            ^
t8667.scala:50: error: too many arguments (found 24, which exceeds the largest Tuple) for method moxi: (x: AnyRef): Int
    moxi(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24)
            ^
t8667.scala:51: error: too many arguments (found 24, which exceeds the largest Tuple) for method movi: (x: Object): Int
    movi(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24)
            ^
t8667.scala:52: error: too many arguments (found 24, expected 1) for method mini: (x: A): Int
    mini(1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24)
            ^
t8667.scala:64: error: too many arguments (found 3, expected 2-tuple) for method t: (t: (Int, Int)): Nothing
  def z = t(42, 27, 17)
                ^
t8667.scala:70: error: unknown parameter name: c
  def x = f(c = "hello, world")
              ^
t8667.scala:76: error: can't supply unit value with infix notation because nullary method f0: (): Int takes no arguments; use dotted invocation instead: x.f0()
    x f0 ()
      ^
t8667.scala:77: error: no arguments allowed for nullary method f0: (): Int
    x.f0(())
         ^
43 errors
